--- a/main.css
+++ b/main.css
@@ -90,7 +90,7 @@ background-attachment: fixed;
 	 content: "";
   display: block;
  /* background-image: url("imagec.jpg");*/
-  background-image: url("redoverlay.jpg");
+  background-image: url("redoverlay2.jpg");
   position: fixed;
   left: 0;
   top: 0;
