--- a/main.css
+++ b/main.css
@@ -10,6 +10,137 @@ body {
 	width: 100%; 
 }
 
+
+
+/************/
+
+.loader_bg {
+	position: fixed; 
+	z-index: 999999; 
+	background:#000;
+	width: 100%; 
+	height: 100%; 
+}
+
+.loader {
+	border: 0 solid transparent; 
+	border-radius: 50%; 
+	width: 150px; 
+	height: 150px; 
+	position: absolute;
+	top: calc(50vh - 75px); 
+	left: calc(50vw - 75px);
+}
+
+.loader:before, .loader:after {
+	content: ''; 
+	border: 5px solid red; 
+	/*box-shadow: 2px 5px #fff;*/
+	border-radius: 50%; 
+	width: 200px;
+	height: 200px;
+	position: absolute;
+	top: 0; 
+	left: 0;
+	animation: loader 2s linear infinite; 
+	opacity: 0; 
+}
+
+.loader:before {
+	animation-delay: .5s; 
+}
+
+@keyframes loader {
+	0%{
+		transform: scale(0);
+		opacity: 0; 
+	}
+
+	50%{
+		opacity: 1; 
+	}
+
+	100%{
+		transform: scale(1);
+		opacity: 0; 
+	}
+}
+
+
+/**********KEEP*************/
+   
+    #loader-wrapper .loader-section {
+        position: fixed;
+        top: 0;
+        width: 51%;
+        height: 100%;
+        background: #000;
+        z-index: 1000;
+        -webkit-transform: translateX(0);  /* Chrome, Opera 15+, Safari 3.1+ */
+        -ms-transform: translateX(0);  /* IE 9 */
+        transform: translateX(0);  /* Firefox 16+, IE 10+, Opera */
+    }
+
+    #loader-wrapper .loader-section.section-left {
+        left: 0;
+    }
+
+    #loader-wrapper .loader-section.section-right {
+        right: 0;
+    }
+
+    /* Loaded */
+    .loaded #loader-wrapper .loader-section.section-left {
+        -webkit-transform: translateX(-100%);  /* Chrome, Opera 15+, Safari 3.1+ */
+            -ms-transform: translateX(-100%);  /* IE 9 */
+                transform: translateX(-100%);  /* Firefox 16+, IE 10+, Opera */
+
+        -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);  
+                transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
+    }
+
+    .loaded #loader-wrapper .loader-section.section-right {
+        -webkit-transform: translateX(100%);  /* Chrome, Opera 15+, Safari 3.1+ */
+            -ms-transform: translateX(100%);  /* IE 9 */
+                transform: translateX(100%);  /* Firefox 16+, IE 10+, Opera */
+
+-webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);  
+        transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
+    }
+    
+    .loaded #loader {
+        opacity: 0;
+        -webkit-transition: all 0.3s ease-out;  
+                transition: all 0.3s ease-out;
+    }
+    .loaded #loader-wrapper {
+        visibility: hidden;
+
+        -webkit-transform: translateY(-100%);  /* Chrome, Opera 15+, Safari 3.1+ */
+            -ms-transform: translateY(-100%);  /* IE 9 */
+                transform: translateY(-100%);  /* Firefox 16+, IE 10+, Opera */
+
+        -webkit-transition: all 0.3s 1s ease-out;  
+                transition: all 0.3s 1s ease-out;
+    }
+    
+    /* JavaScript Turned Off */
+    .no-js #loader-wrapper {
+        display: none;
+    }
+    .no-js h1 {
+        color: #222222;
+    }
+
+    #content {
+        margin: 0 auto;
+        padding-bottom: 50px;
+        width: 80%;
+        max-width: 978px;
+}
+
+/*************************/
+
 /*.body-main {
 	background-color: #000; 
 	color:#fff;
