--- a/main.css
+++ b/main.css
@@ -34,7 +34,7 @@ body {
 
 .loader:before, .loader:after {
 	content: ''; 
-	border: 5px solid red; 
+	border: 1em solid red; 
 	/*box-shadow: 2px 5px #fff;*/
 	border-radius: 50%; 
 	width: 200px;
@@ -42,6 +42,8 @@ body {
 	position: absolute;
 	top: 0; 
 	left: 0;
+	-webkit-animation: loader 2s linear infinite;
+	-ms-transform-animation: loader 2s linear infinite;
 	animation: loader 2s linear infinite; 
 	opacity: 0; 
 }
@@ -52,6 +54,8 @@ body {
 
 @keyframes loader {
 	0%{
+		-webkit-transform:scale(0);
+		 -ms-transform: scale(0);
 		transform: scale(0);
 		opacity: 0; 
 	}
@@ -61,6 +65,8 @@ body {
 	}
 
 	100%{
+		-webkit-transform:scale(1);
+		-ms-transform: scale(1);
 		transform: scale(1);
 		opacity: 0; 
 	}
