--- a/main.css
+++ b/main.css
@@ -101,7 +101,8 @@ body {
             -ms-transform: translateX(-100%);  /* IE 9 */
                 transform: translateX(-100%);  /* Firefox 16+, IE 10+, Opera */
 
-        -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);  
+        -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000); 
+        -ms-transition:all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000); 
                 transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
     }
 
@@ -110,13 +111,15 @@ body {
             -ms-transform: translateX(100%);  /* IE 9 */
                 transform: translateX(100%);  /* Firefox 16+, IE 10+, Opera */
 
--webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);  
+-webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000); 
+-ms-transition:all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000); 
         transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
     }
     
     .loaded #loader {
         opacity: 0;
         -webkit-transition: all 0.3s ease-out;  
+        -ms-transition: all 0.3s ease-out ;
                 transition: all 0.3s ease-out;
     }
     .loaded #loader-wrapper {
@@ -126,7 +129,8 @@ body {
             -ms-transform: translateY(-100%);  /* IE 9 */
                 transform: translateY(-100%);  /* Firefox 16+, IE 10+, Opera */
 
-        -webkit-transition: all 0.3s 1s ease-out;  
+        -webkit-transition: all 0.3s 1s ease-out; 
+        -ms-transition:all 0.3s 1s ease-out; 
                 transition: all 0.3s 1s ease-out;
     }
     
