--- a/main.css
+++ b/main.css
@@ -10,7 +10,32 @@ body {
 	width: 100%; 
 }
 
+.animated {
+	animation-duration: 3s;
+}
 
+.tapis-logo {
+	animation-delay: 4s; 
+} 
+.col-top h1 {
+	animation-delay: 5s; 
+}
+.col-top h3  {
+	animation-delay: 6s; 
+}
+.subscribe {
+	animation-delay: 7s; 
+}
+.input-group {
+	animation-delay: 8s; 
+}
+.social {
+	animation-delay: 9s; 
+}
+
+.contact {
+	animation-delay: 10s;
+}
 
 /************/
 
@@ -395,304 +420,11 @@ input {
 	color: #fff; 
 }
 
- .addressp {
- 	font-weight: bolder; 
- 	color: #fff; 
- 	text-align: justify;
- 	text-justify: inter-word;
-	margin-top: 30px; 
-}
-
-/**************BASH SUBMISSIONS*************************/
-
-
-.bash  {
-	text-align: center!important;
-	letter-spacing: 10px; 
-/*	color: #FF008F; */
-	color: #FF0089; 
-}
-
-.bash-date{
-	/*letter-spacing: 9px; */
-	color: #fff; 
-}
-
-.bsh-date {
-	color: #FF0089;
-}
-
-.btn-bash {
-/*	background-color: white!important;*/
-background-color: transparent!important; 
-	/*border: none; */
-	border: 2px solid #fff;
-	/*color: #000; */
-	font-weight: bolder; 
-	padding: 30px;
-	margin: 45px!important;   
-	text-align: center; 
-}
-
-.btn-bash:hover {
-	border: 6px solid #FF0089;
-	background-color: transparent!important; 
-}
-
-
-/**************CAR REG*************************/
-
-.cars-body {
-	height: 700px; 
-}
-
-.swrv-logo {
-height: auto; 
-	width: 250px; 
-	margin-top: 25px; 
-}
-
-.car-head {
-	color: #fff;
-	margin-top: 50px; 
-	margin-bottom: 20px; 
-	letter-spacing: 11px; 
-	font-size: 15px; 
-
-}
-
-.car-links {
-	color: #fff;
-}
-
-.car-head-l {
-	/*color: #FF0089;
-	font-size: 80px; */
-}
-
-.car-reg-p {
-	font-size: 15px; 
-	text-align: justify; 
-	margin-bottom: 0; 
-	font-weight: lighter;
-	color: lightgrey; 
-}
-
-.img-link{
-	font-weight: lighter;
-	color: lightgrey; 
-	margin-top: 20px; 
-}
-
-.carpp{
-	font-weight: bolder;
-
-}
-
-.car-pp {
-	color: #fff; 
-	font-weight: bolder;
-}
-
-.alert{
-	display: none; 
-	margin-top: 10px; 
-	font-size: 16px; 
-    text-align: center; 
-    padding: 10px; 
-    background-color: transparent; 
-   /* border: 1px solid #FF0089;  */
-    color: white;
-    margin-bottom: 10px; 
-    /*display: none; */
-} 
-
-::placeholder {
-	color: #fff!important; 
-}
-
-.f-control, .f-group {
-	border-top: medium none !important; 
-	border-left: medium none !important; 
-	border-right: medium none !important; 
-	box-shadow: none !important; 
-}
-
-input, textarea {
-	color: #fff!important; 
-	outline: none; 
-	box-shadow: none !important; 
-}
-
-.flyer_img {
-	opacity: .5; 
-}
-
-.car-img {
-	width: 250px;
-	margin-top: 3px; 
-	margin-bottom: 10px;
-
-
-	/*background-color: pink!important;*/
-}
-
-
-.car-reg-submit {
-	margin-top: 80px; 
-	margin-right: 50px; 
-	margin-left: 50px; 
-	letter-spacing: 5px;  
-	border-radius: 0!important;
-}
-
-.car-reg-submit_1 {
-	margin-right: 0; 
-	margin-left: 0; 
-	margin-top: 50px; 
-}
-
-.car-reg-submit:hover {
-	border: 3px solid #FF0089;
-}
-
-.car-img-submit {
-/*	color: #7100CC;
-	border-radius: 3px!important; */
-	display: none; 
-}
-
-/*input[type="file"] {
-	display: none; 
-}*/
-
-::-webkit-file-upload-button {
-
-  background-color: transparent;
-  color: #fff;
-  padding: 1em;
-  border-radius: 5px; 
-  border: 1px solid #7100CC; 
-  cursor: pointer; 
-
-}
-
-::-webkit-file-upload-button:hover {
-	border: 3px solid #7100CC; 
-}
-
-/*.car-uploadd {
-	border: 1px solid #ccc;
-    display: inline-block;
-    padding: 6px 12px;
-    cursor: pointer;
-}*/
-
-/*.car-img input[type="file"] {
-	-webkit-appearance:none;
-	position: absolute;
-}*/
-
-/*btn-upload {
-	position: relative !important;
-	overflow: hidden!important;
-	display: inline-block!important;
-}
-.btn-upload input [type=file] {
-	position: absolute!important; 
-	opacity: 0!important; 
-	z-index: 0!important; 
-	max-width: 100%!important; 
-	height: 100% !important; 
-	display: block !important; 
-}*/
-
-/***********HIDE NO FILE CHOOSE**********/
-
-/*input[type="file"] {
-	color: transparent;
-}*/
-
-
-
-.inputfile {
-	width: 0.1px;
-	height: 0.1px; 
-	opacity: 0; 
-	overflow: hidden;
-	position: absolute;
-	z-index: -1; 
-}
-
-.inputfile + label {
-	width: 150px;  
-	margin-top: 20px; 
-	background-color: transparent;
-  color: #fff;
-  padding: 1em;
-  border-radius: 5px; 
-  border: 1px solid #FFF; 
-  cursor: pointer; 
-}
-
-.inputfile:focus + label, 
-.inputfile + label:hover {
-	border: 3px solid #FF0089; 
-}
-
-/***********Artist***************/
-
-
-
-.artist-reg-submit {
-    content: ""; /* This is necessary for the pseudo element to work. */ 
-    display: block; /* This will put the pseudo element on its own line. */
-    margin: 0 auto; /* This will center the border. */
-    width: 50%; /* Change this to whatever width you want. */
-   /* padding: 5px;*/ /* This creates some space between the element and the border. */
-    /* This creates the border. Replace black with whatever color you want. */
-    margin-top: 70px; 
-    font-size: 20px; 
-
-}
-
-.artist-reg-submit:hover {
-	border: 3px solid #fff!important;
-}
-
-/***********Vendors***************/
-
-.vendors-reg-submit {
-	content: ""; /* This is necessary for the pseudo element to work. */ 
-    display: block; /* This will put the pseudo element on its own line. */
-    margin: 0 auto; /* This will center the border. */
-    width: 50%; /* Change this to whatever width you want. */
-    padding: 5px; /* This creates some space between the element and the border. */
-    /* This creates the border. Replace black with whatever color you want. */
-    margin-top: 100px; 
-    font-size: 20px;
-}
-
-.vendors-reg-submit:hover {
-	border: 3px solid #fff;
-}
-
-/***********Progress Box *************************************************/
-
-#uploader {
-	-webkit-appearance: none;
-	appearance: none;
-	width: 100%; 
-	margin-bottom: 10px; 
-}
-
-
-
-#uploader_1, #uploader_2, #uploader_3 {
-	-webkit-appearance: none;
-	appearance: none;
-	width: 100%; 
-	margin-bottom: 10px;
+.contact {
+    /*font-size: 20px;*/
+    color: #fff;
+    text-shadow: 0 0 10px #333;
+    font-family: 'Didact Gothic', sans-serif;
 }
 
 
