--- a/responsive.css
+++ b/responsive.css
@@ -35,7 +35,7 @@ background-attachment: fixed;
 
 .col-top h1 {
     color: #fff;
-    margin-top: initial;
+    margin-top: 30px;
     text-transform: uppercase;
     letter-spacing: 5px;
     font-size: 42px;
@@ -101,7 +101,7 @@ background-attachment: fixed;
 	 content: "";
   display: block;
  /* background-image: url("imagec.jpg");*/
-  background-image: url("redoverlay2.jpg");
+ /* background-image: url("redoverlay2.jpg");*/
   position: fixed;
   left: 0;
   top: 0;
