--- a/main.css
+++ b/main.css
@@ -438,12 +438,37 @@ input {
 	border: 2px solid #fff; 
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 20px; 
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+/*  border-radius: 10px;*/
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: transparent; 
+ /* border-radius: 10px;*/
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #333; 
+ 
+}
+
+
 .contact {
     font-size: 20px;
     color: #fff;
     text-shadow: 0 0 10px #333;
     font-family: 'Didact Gothic', sans-serif;
 }
+
 
 
 /*Flyer*/
