--- a/main.css
+++ b/main.css
@@ -6,6 +6,8 @@ body {
 	  	/*opacity: .55; */
 }
 
+/*  #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+*/
 .tapis-logo {
 	width: 100%; 
 }
@@ -23,18 +25,16 @@ body {
 .col-top h3  {
 	animation-delay: 6s; 
 }
-.subscribe {
+.social {
 	animation-delay: 7s; 
 }
-.input-group {
-	animation-delay: 8s; 
-}
-.social {
-	animation-delay: 9s; 
+
+.social-span {
+  animation-delay: 8s; 
 }
 
 .contact {
-	animation-delay: 10s;
+	animation-delay: 9s;
 }
 
 /************/
@@ -467,6 +467,60 @@ input {
     color: #fff;
     text-shadow: 0 0 10px #333;
     font-family: 'Didact Gothic', sans-serif;
+}
+
+/**********CONTACT FORM************/
+
+.clear {
+    /* width: fit-content; */
+    display: inline-block;
+}
+
+#mc_embed_signup .button {
+    font-size: 13px;
+    cursor: pointer;
+    border: none;
+    border-bottom: 2px solid #fff; 
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 0;
+    letter-spacing: .03em;
+    text-transform: uppercase;
+    color: #fff;
+    background-color: #aaa;
+    box-sizing: border-box;
+    height: 32px;
+    line-height: 32px;
+    padding: 0 18px;
+    display: inline-block;
+    margin: 0;
+    transition: all 0.23s ease-in-out 0s;
+}
+
+#mc_embed_signup .button:hover {
+  letter-spacing: 3px; 
+}
+
+#mc_embed_signup input.email {
+    font-family: "Open Sans","Helvetica Neue",Arial,Helvetica,Verdana,sans-serif;
+    font-size: 15px;
+    border-bottom: 2px solid #fff;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 3px;
+    text-transform: uppercase;
+    border-radius: 3px;
+    color: #fff;
+    background-color: #fff;
+    box-sizing: border-box;
+    height: 32px;
+    padding: 0px 0.4em;
+    display: inline-block;
+    margin: 0;
+    width: initial;
+    vertical-align: top;
 }
 
 
