--- a/responsive.css
+++ b/responsive.css
@@ -18,9 +18,50 @@ body {
 	width: 100%; 
 }
 
-.contact {
-    
+/************CONTACT************/
+#mc_embed_signup input.email {
+    font-family: "Open Sans","Helvetica Neue",Arial,Helvetica,Verdana,sans-serif;
+    font-size: 15px;
+    border-bottom: 1px solid #ABB0B2;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    color: #343434;
+    background-color: #fff;
+    box-sizing: border-box;
+    height: 32px;
+    padding: 0px 0.4em;
+    display: inline-block;
+    margin: 0;
+    width: 549px; 
+  /*  width: 350px;*/
+    vertical-align: top;
 }
+
+#mc_embed_signup .button {
+    font-size: 13px;
+    border: none;
+    border-bottom: 1px solid #f3f3f3; 
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 0;
+    letter-spacing: .03em;
+    text-transform: uppercase;
+    color: #fff;
+    background-color: #aaa;
+    box-sizing: border-box;
+    height: 32px;
+    line-height: 32px;
+    padding: 0 18px;
+    display: inline-block;
+    margin: 0;
+    transition: all 0.23s ease-in-out 0s;
+}
+
+
 /*.body-main {
 	background-color: #000; 
 	color:#fff;
