--- a/main.css
+++ b/main.css
@@ -37,6 +37,10 @@ body {
 	animation-delay: 9s;
 }
 
+.panel-footer {
+  animation-delay: 10s; 
+}
+
 /************/
 
 .loader_bg {
@@ -521,7 +525,7 @@ input {
     padding: 0px 0.4em;
     display: inline-block;
     margin: 0;
-    width: initial;
+    width: 235px;
     vertical-align: top;
 }
 
@@ -553,16 +557,16 @@ input {
 
 .foot-text a {
 	text-decoration: none; 
-	color: #000; 
+	color: #fff; 
 }
 
 .panel-footer {
 	height: auto;
-    background-color: #f5f5f5; 
+background-color: transparent;
     font-size: smaller; 
-    border-top: 1px solid #7100CC; 
+ border-top: 1px solid gray; 
     margin-top: 120px; 
-    color: #000; 
+    color: #fff; 
 }
 
 .panel-footer p {
@@ -575,3 +579,8 @@ input {
 .panel-footer img {
 	margin-left: 3px; 
 }
+
+.foot-text span {
+    float: right;
+}
+
